feat(api): return vehicle type
